# project-monster-attack

./: .gitignore  .gitmodules  LICENSE  README.md
Monster Attack/Configs/: AllScenesEnv.ezBlackboardTemplateAsset  Traps.ezCollectionAsset
Monster Attack/CppSource/: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakeUserPresets.json
Monster Attack/CppSource/Configs/: CMakeEngineExtensions.txt
Monster Attack/CppSource/MonsterAttackGame/: CMakeLists.txt
Monster Attack/Editor/: AnimationClipMappingEnum.txt  AssetProfiles.ddl  BlackboardKeysEnum.txt  BlackboardNamesEnum.txt  CppProject.ddl  PluginSelection.ddl  SurfaceInteractionTypeEnum.txt
Monster Attack/Logic/: Build-Phase.ezVisualScriptClassAsset  Configure-Environment.ezVisualScriptClassAsset  Monster-Wave.ezVisualScriptClassAsset  Phase-Countdown.ezVisualScriptClassAsset  Phase-Fight.ezVisualScriptClassAsset  Phase-Lost.ezVisualScriptClassAsset  Phase-Win.ezVisualScriptClassAsset
Monster Attack/Monsters/: Effects.ezCollectionAsset  Monster.ezAnimationGraphAsset  Monsters.ezCollectionAsset
Monster Attack/Pieces/: StoneBackground.ezMaterialAsset
Monster Attack/RuntimeConfigs/: AiPluginConfig.cfg  CollisionLayers.cfg  ImpulseTypes.cfg  InputConfig.ddl  Plugins.ddl  WeightCategories.cfg  Window.ddl
Monster Attack/Scenes/: Creatures.ezScene  Level2.ezScene  Main.ezScene
Monster Attack/Sound/: FmodMaster.ezSoundBankAsset
Monster Attack/Surfaces/: Default.ezSurfaceAsset  Metal.ezSurfaceAsset  Stone.ezSurfaceAsset  Tar.ezSurfaceAsset  Wood.ezSurfaceAsset
(+271 files in other folders)
